Update 7. JSP Model2.md

--- a/7. JSP Model2.md
+++ b/7. JSP Model2.md
@@ -81,3 +81,7 @@ public class Spag extends HttpServlet {
 
 #### request에 담긴 값을 사용할 수 있다.
 #### 이 때, 중요한 점은 실행은 반드시 컨트롤러가 담당해야 한다는 것이다. ( 서블릿 클래스 )
+
+![image](https://github.com/user-attachments/assets/f173c9e0-e087-4cc0-86a9-8d782232e098)
+
+#### 위와 같은 방식이 JSP Model2 방식이라 볼 수 있다.
